--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,6 +56,10 @@
   h4 {
     @apply font-sec text-lg lg:text-xl;
   }
+
+  h5 {
+    @apply text-sm lg:text-base;
+  }
 }
 
 .textPri {
@@ -72,6 +76,10 @@
 
 .sectionPy {
   @apply py-8 lg:py-16;
+}
+
+.sectionPt {
+  @apply pt-8 lg:pt-16;
 }
 
 .textHover {
