--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,6 +107,10 @@
   @apply mb-6 text-lg leading-relaxed last:mb-0 lg:text-2xl;
 }
 
+.markdown h4 {
+  @apply my-6 text-base leading-relaxed last:mb-0 lg:text-xl;
+}
+
 .markdown li {
   @apply py-1;
 }
