--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -119,7 +119,7 @@
 }
 
 .markdown a {
-  @apply underline underline-offset-4 duration-300  hover:text-gray-600 group-hover:text-gray-600 dark:hover:text-gray-700 dark:group-hover:text-gray-700;
+  @apply underline underline-offset-4 duration-300  hover:text-orange  dark:hover:text-orange;
 }
 
 .markdown li {
@@ -128,6 +128,18 @@
 
 .markdownTextSm p {
   @apply mb-3 text-sm last:mb-0 lg:text-base;
+}
+
+.markdownTextSm a {
+  @apply underline underline-offset-4 duration-300  hover:text-orange  dark:hover:text-orange;
+}
+
+.markdownTextSmDesktop p {
+  @apply mb-3 text-sm last:mb-0;
+}
+
+.markdownTextSmDesktop a {
+  @apply underline underline-offset-4 duration-300  hover:text-orange  dark:hover:text-orange;
 }
 
 .markdown h5 {
